[tool.poetry]
name = "rl-graph-cube"
version = "0.1.0"
description = "Rubik's cube graph solver. RL based."
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torch-geometric = "^2.4.0"
kaggle = "^1.6.6"
tensordict = "^0.3.1"
torchrl = "^0.3.1"
pandas = "^2.2.1"
sympy = "^1.12"
matplotlib = "^3.8.3"
rubiks-cube-gym = "^0.5.2"
tqdm = "^4.66.2"
hydra-core = ">=1.1"
hydra-submitit-launcher = "^1.2.0"
gym = {extras = ["accept-rom-license"], version = "^0.26.2"}
pygame = "^2.5.2"
dm-control = "^1.0.18"
gymnasium = {extras = ["atari"], version = "^0.29.1"}
torchvision = "^0.18.0"
wandb = "^0.16.6"
networkx = "^3.4.2"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ipython = "^8.0.0"
flake8 = "^6.1.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.9.16"
flake8-pyproject = "^1.2.3"
pep8-naming = "^0.13.3"
mypy = "^1.6.1"
click = "^8.1.3"
types-pyyaml = "^6.0.12.2"
types-toml = "^0.10.8.7"
ipykernel = "^6.29.0"
types-python-dateutil = "^2.8.19.20240106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.blue]
line-length = 88
preview = true


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 88
max-complexity = 7
extend-immutable-calls = [
    "Depends",
    "Query",
    "FilterDepends",
]


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
]
mypy_path = [
    "src",
    "tests",
]


[tool.pytest.ini_options]
pythonpath = "src"
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = [
    "venv*",
    ".venv",
]
addopts = "-v -x -s"
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
